src/app/modules/groups/sidebar-markers/sidebar-markers.component.scss
@import 'defaults';

m-group--sidebar-markers {
  &.m-groupSidebarMarkers__leftSidebar {
    h5.m-groupSidebarMarkers__header {
      font-size: 11px;
      line-height: 30px;
      letter-spacing: 1.83px;
      text-transform: uppercase;
      @include m-theme() {
        color: rgba(themed($m-black), 0.3);
      }
      @media screen and (max-width: $layoutMax3ColWidth) {
        display: none;
      }
    }

    .m-groupSidebarMarkers__list {
      margin: 0;
      padding: 0;
      width: auto !important;
      height: auto !important;
      max-width: unset;
      min-height: unset;
      box-shadow: unset !important;
      display: block !important;
      overflow: unset !important;

      & > li {
        width: auto;
        height: auto;
        border: unset !important;
        position: relative;

        a {
          display: inline-flex;
          flex-direction: row;
          padding: 8px 16px 8px 0;
          line-height: 30px;
          box-sizing: border-box;
          width: 100%;
          justify-content: center;

          @media screen and (max-width: $layoutMax3ColWidth) {
            padding: 8px 0;
          }

          &.m-groupSidebarMarkersList__item--newGroup,
          &.m-groupSidebarMarkersList__item--discoverGroups {
            @include m-theme() {
              color: themed($m-grey-200);
            }

            i.material-icons {
              @include m-theme() {
                color: themed($m-grey-500);
              }
            }
          }

          .m-groupSidebarMarkersListItem__label {
            display: inline-block;
            flex: 1;
            font-size: 14px;
            font-weight: normal;
            margin-left: 24px;
            white-space: nowrap;
            text-overflow: ellipsis;
            overflow-x: hidden;

            @include m-theme() {
              color: themed($m-textColor--secondary);
            }

            @media screen and (max-width: $layoutMax3ColWidth) {
              display: none;
            }
          }

          m-tooltip {
            vertical-align: middle;
            // margin-right: 21px;

            img {
              width: 27px;
              height: 27px;
            }

            i.material-icons {
              font-size: 20px;
              width: 27px;
              height: 27px;
            }
          }
        }
      }

      infinite-scroll {
        padding: 2px 0 !important;
        width: 48px !important;

        .m-infinite-scroll-manual {
          font-size: 10px;
          padding: 2px;
          background-color: transparent !important;
          transform: rotate(0) !important;
          text-align: left;
        }
      }
    }
  }
}

.m-groupSidebarMarkers__list {
  display: block;
  margin: auto;
  max-width: 1280px;
  padding: 0;
  min-height: 100%;
  height: 100%;
  padding-bottom: 20px;
  padding-right: 20px;
  width: 90px;
  overflow-y: auto;
  list-style-type: none;
  @media screen and(min-width: $min-desktop) {
    @include m-theme() {
      box-shadow: 0 2px 5px rgba(themed($m-black), 0.2);
    }
  }

  @media screen and(max-width: $min-desktop) {
    padding-right: 0;
    &::-webkit-scrollbar,
    &::-webkit-scrollbar:horizontal {
      display: none;
    }
  }

  infinite-scroll {
    padding: 2px 0;

    @media screen and(min-width: $min-desktop) {
      width: 48px;
    }

    .m-infinite-scroll-manual {
      font-size: 10px;
      padding: 2px;
      background-color: transparent !important;
    }
  }

  @media screen and(max-width: $min-desktop) {
    max-width: initial;
    width: 100%;
    overflow-x: auto;
    overflow-y: hidden;
    height: 48px;
    display: flex;

    infinite-scroll {
      width: initial;
      padding: 12px;

      .m-infinite-scroll-manual {
        white-space: nowrap;
        transform: rotate(-90deg);
      }
    }
  }

  li {
    margin: 0;
    padding: 0;
    vertical-align: middle;
    line-height: 1;
    width: 48px;
    height: 48px;
    position: relative;
    @include m-theme() {
      border-bottom: 1px solid themed($m-grey-50);
    }

    @media screen and(max-width: $min-desktop) {
      border-bottom: none;

      &:not(:last-child) {
        @include m-theme() {
          border-right: 1px solid themed($m-grey-50);
        }
      }
    }

    a {
      display: block;
      padding: 8px;
      text-decoration: none;

      .m-tooltip--bubble--anchor-right {
        white-space: initial;
        width: max-content;
      }
    }

    i.material-icons {
      width: 32px;
      height: 32px;
      display: flex;
      align-items: center;
      justify-content: center;
      border-radius: 50%;
      @include m-theme() {
        border: 1px solid themed($m-grey-50);
        // Account for misalignment caused by 1px border.
        transform: translateX(-1px);
      }
    }

    img {
      width: 30px;
      height: 30px;
      border-radius: 50%;
      vertical-align: middle;
      @include m-theme() {
        border: 1px solid themed($m-grey-50);
      }
    }

    span {
      font-size: 11px;
      vertical-align: middle;
      display: none;
    }
  }

  .has-marker::after {
    border-radius: 50%;
    display: block;
    height: 8px;
    width: 8px;
    content: '';
    position: absolute;
    top: 4px;
    left: 4px;
    @include m-theme() {
      background-color: themed($m-blue);
    }
  }

  .m-tooltip--bubble--anchor-right {
    margin-top: -36px;
    text-align: right;
    width: auto;
    max-width: 200px;
    white-space: nowrap;
  }
}

